codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bare_exit_command_warning.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
› exit

  Did you mean /exit?  enter to exit  esc to dismiss
