codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bare_resume_command_warning.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: "render_bottom_popup(&chat, 80)"
---
› resume

  Did you mean /resume?  enter to resume  esc to dismiss
